Cabal-Version:      2.4
Name:               plutus-pioneer-program-week07
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week07.EvenOdd
                     , Week07.TestEvenOdd
                     , Week07.EvenOddAlternative1
                     , Week07.EvenOddOriginal
                     , Week07.StateMachine
                     , Week07.StateMachineOriginal
                     , Week07.TestStateMachine
                     , Week07.RPS.RockPaperScissors
                     , Week07.RPS.TestRockPaperScissors
                     , Week07.RPS.PAB
                     , Week07.RPS.Monitor
                     , Week07.RPS.Utils
                     , Week07.RPS.Send

  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , containers
                     , data-default
                     , freer-extras
                     , openapi3
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , random
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable rps-pab
  main-is: rps-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-pioneer-program-week07
                     , plutus-use-cases
                     , text

executable game
  main-is: game.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , aeson
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-pab
                     , plutus-pioneer-program-week07
                     , req ^>= 3.9.0
                     , text
                     , uuid                 

executable monitor
  main-is: monitor.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-pab
                     , plutus-pioneer-program-week07
                     , req ^>= 3.9.0
                     , text                     

executable send
  main-is: send.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-pab
                     , plutus-pioneer-program-week07
                     , req ^>= 3.9.0
                     , text                           